Page de vente - rédaction
Fin de la relecture => MEP !  :-D

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         de développement pour les accompagner dans leurs tâches.
         </p>
         <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
-          <strong>Je parie que ton problème, ce n'est pas un manque de compétences, 
+          <strong>Je parie que votre problème, ce n'est pas un manque de compétences, 
             mais bel et bien un manque de motivation.</strong><br/>
           Et c'est logique car sans motivation, on ne se donne pas à cent pour cent.<br/><br/>
           Pour susciter de l'intérêt, on voit de plus en plus la mécanique de <strong>gamification</strong> 
@@ -159,12 +159,13 @@
           On trouve de nombreux exemples aujourd'hui :
         </p>    
         <ul class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10"  style="text-align: justify;">
+          <li>Les bons d'achat à cumuler ou jeux concours permettant de gagner le montant de nos courses</li>
           <li>En méthodologie Agile, un jeu de cartes <i>(poker planning)</i> est utilisé pour déterminer la difficulté des fonctions à réaliser</li>
           <li>En Suède, la quantité de verre recyclé a été multipliée par 2, juste en faisant du dépôt de bouteilles un jeu ludique</li>
           <li>L'application mobile Do It Now, téléchargée plus de 500 000 fois, motive à effectuer les tâches du quotidien (ménage, se brosser les dents, faire du sport)</li>
         </ul>     
     </div>
-        <h3 style="text-align: center;">En quoi cela résout mon problème de productivité ?</h3>   
+        <h3 style="text-align: center;">En quoi cela résout mon problème de service client ?</h3>   
 
     <div class="container">
         <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
@@ -175,7 +176,7 @@
           <li>Mettre la pression à votre équipe, ou au contraire les soutenir, et leur proposer une récompense
             s'ils fournissent de bons résultats (par exemple une prime)
           </li>
-          <li>Ou utiliser un outil de gestion de tickets incidents qui emploie des fonctionnalités de <strong>gamification<strong></strong></li>
+          <li>Ou utiliser une application de gestion de tickets incidents qui emploie des fonctionnalités de <strong>gamification<strong></strong></li>
         </ul>
         <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
           <strong>Il s'avère que je développe actuellement cet outil.</strong>
@@ -187,11 +188,11 @@
     <div class="container">      
         <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
           Et c'est justement l'occasion pour vous de <strong>faire partie des premiers utilisateurs</strong>, et de pouvoir 
-          me faire des retours afin d'<strong>améliorer efficacement et rapidement l'application</strong>.
+          me faire des retours afin d'améliorer efficacement et rapidement l'application.
         </p>
         <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
-          Imaginez qu'avec cette solution, vos collègues seront plus soudés : ils parleront des points de score 
-          qu'ils auront gagné en résolvant tel problème; seraient fiers d'avoir réduit de moitié le nombre de tickets 
+          Imaginez qu'avec cette solution, vos collègues seront plus soudés : ils évoqueront le score 
+          qu'ils auront atteint en résolvant tel problème; seraient fiers d'avoir réduit de moitié le nombre de tickets 
           en attente cette semaine; ou réussissent à bien gérer la charge de travail malgré la période 
           d'inventaire magasin des clients.
         </p>  
@@ -202,7 +203,7 @@
         </p>  
     </div>  
     <div class="heading">
-      <h2>L'application web Run Ran Run</h2>
+      <h2>L'application Run Ran Run</h2>
     </div>     
     <div class="container">
       <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
@@ -210,11 +211,11 @@
       </p>
       <ul class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10"  style="text-align: justify;">
         <li>Pas d'infrastructure ou d'installation de votre côté : tout est géré chez nous.<br/>
-          Il suffira de vous connecter sur le site Run Ran Run et de <strong>travailler directement</strong> en ligne</li>
+          Il suffira de vous connecter grâce à votre compte sur le site Run Ran Run et de <strong>travailler directement</strong> en ligne</li>
         <li>Une interface claire et facile à appréhender : pas besoin de connaître l'application sur le bout 
           des doigts pour la maîtriser. <strong>Gain de temps</strong> sur le traitement des incidents
         </li>
-        <li>Un affichage permettant de <strong>croiser les informations</strong> des incidents : fini de naviguer à répétition entre les onglets et écrans</li>
+        <li>Un affichage permettant de <strong>croiser les informations</strong> des incidents : fini la navigation à répétition entre les onglets et écrans</li>
         <li>Les fameux mécanismes de jeu expliqués dans les paragraphes précédents, qui rendront le travail <strong>ludique et motivant</strong></li>
       </ul>
     </div>    
@@ -252,8 +253,8 @@
     <div class="container"> 
       <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
         Si vous voulez essayer cette solution pour <strong>améliorer la productivité et la motivation</strong> de vos collaborateurs,
-        <strong>restez informé</strong> de l'avancée du développement de Run Ran Run en laissant vos coordonnées ci-dessous.<br/><br/>
-        Si vous n'êtes pas intéressé, dans tous les cas <strong>ne laissez pas cette situation durer !</strong><br/>
+        <strong>soyez un des premiers informés</strong> sur le développement de l'application Run Ran Run en laissant vos coordonnées ci-dessous.<br/><br/>
+        Si vous n'êtes pas intéressé, dans tous les cas <strong>ne laissez pas votre situation durer !</strong><br/>
         N'oubliez pas que vous avez <strong>30 jours d'essai</strong> pour vous faire votre avis.
       </p>
     </div>
