Page de vente - formulaire contact
Suppression du formulaire php pour utiliser un mailto classique

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 conForm">
         <h4>Restez informé</h4>
         <div id="message"></div>
-        <form method="post" action="php/contact.php" name="cform" id="cform">
+        <form method="post" enctype="text/plain" action="mailto:3r.runranrun@gmail.com" name="cform" id="cform">
           <input name="name" id="name" type="text" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Votre nom..." >
           <input name="email" id="email" type="email" class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr" placeholder="Votre email..." >
           <textarea name="comments" id="comments" cols="" rows="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Quel est la fonctionnalité de Run Ran Run qui vous intéresse le plus ?"></textarea>
