--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <strong>Mais les effets bénéfiques ne seront que temporaires.</strong><br/><br/>
         </p>  
     </div>  
-    <div class="heading">
+    <div class="heading">      
       <h2>L'application Run Ran Run</h2>
     </div>     
     <div class="container">
@@ -189,6 +189,9 @@
     <div class="container">
       <div class="heading">
         <h3 style="text-align: center;">L'offre que j'ai à vous proposer</h3> 
+        <br/><br/>
+        <img src="images/3r-logo.png" style="width: 150px;height: 150px;"/>
+      
       </div>
       <div class="row waterfall" data-col-min-width="500">
         <!-- <div class="col-lg-10 col-md-10 col-xs-12 col-sm-10 refBox">
@@ -234,10 +237,9 @@
       <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 conForm">
         <h4>Restez informé</h4>
         <div id="message"></div>
-        <form method="post" enctype="text/plain" action="mailto:3r.runranrun@gmail.com" name="cform" id="cform">
+        <form enctype="text/plain" name="cform" id="cform">
           <input name="name" id="name" type="text" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Votre nom..." >
           <input name="email" id="email" type="email" class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr" placeholder="Votre email..." >
-          <textarea name="comments" id="comments" cols="" rows="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Quel est la fonctionnalité de Run Ran Run qui vous intéresse le plus ?"></textarea>
           <input type="submit" id="submit" name="send" class="submitBnt" value="Envoyer">
           <div id="simple-msg"></div>
         </form>
@@ -373,6 +375,7 @@ $( ".navbar-toggle" ).click(function() {
 </script>
 
 <!--contact form js--> 
-<script type="text/javascript" src="js/jquery.contact.js"></script>
+<!-- <script type="text/javascript" src="js/jquery.contact.js"></script> -->
+<script src="js/formulaire.js"></script>
 </body>
 </html>
