Intégration de la démo
+ correctif pour que le formulaire de fin amène au formulaire Google

--- a/index.html
+++ b/index.html
@@ -53,27 +53,28 @@
 <body>
 
 <!--wrapper start-->
-<div class="wrapper" id="wrapper">
-  <section class="protfolio" id="introduction">
-    <div>
-      <div class="portfolioTop clearfix">
-          <div class="heading">
-            <h1>Les incidents de production</h1>   
-            <h2>Trouver la motivation à les traiter</h2>         
-          </div>      
-          <!-- ce paramétrage pour le paragraphe permet d'avoir du texte justifié et centré impec-->
-          <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
-            Prendre en charge le support client est une tâche ardue :
-          </p>          
-          <ul class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10"  style="text-align: justify;">
-            <li>Parfois beaucoup de travail pour résoudre un problème unique</li>
-            <li>Certaines périodes, et malgré tous nos efforts, la pile de tickets ne cesse de grandir</li>
-            <li>On doit jongler entre différentes informations et priorités</li>
-          </ul>          
-          <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">  
-            Et si il existait une <strong>solution</strong> à ce manque de motivation, 
-            qui parfois nous envahit nous, ou notre équipe, dans ce travail pourtant important : <strong>la satisfaction client</strong> ?
-          </p>
+<div class="wrapper" id="wrapper">  
+  <section class="protfolio" id="introduction">    
+    <div>      
+      <div class="portfolioTop clearfix"> 
+        <a href="demo" class="mbnt"><strong>Accéder à la démo</strong></a>       
+        <div class="heading">            
+          <h1>Les incidents de production</h1>   
+          <h2>Trouver la motivation à les traiter</h2>         
+        </div>      
+        <!-- ce paramétrage pour le paragraphe permet d'avoir du texte justifié et centré impec-->
+        <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
+          Prendre en charge le support client est une tâche ardue :
+        </p>          
+        <ul class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10"  style="text-align: justify;">
+          <li>Parfois beaucoup de travail pour résoudre un problème unique</li>
+          <li>Certaines périodes, et malgré tous nos efforts, la pile de tickets ne cesse de grandir</li>
+          <li>On doit jongler entre différentes informations et priorités</li>
+        </ul>          
+        <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">  
+          Et si il existait une <strong>solution</strong> à ce manque de motivation, 
+          qui parfois nous envahit nous, ou notre équipe, dans ce travail pourtant important : <strong>la satisfaction client</strong> ?
+        </p>
       </div>      
     </div>
   </section>
@@ -129,7 +130,7 @@
           <li>L'application mobile Do It Now, téléchargée plus de 500 000 fois, motive à effectuer les tâches du quotidien (ménage, se brosser les dents, faire du sport)</li>
         </ul>     
     </div>
-        <h3 style="text-align: center;">En quoi cela résout mon problème de service client ?</h3>   
+    <h3 style="text-align: center;">En quoi cela résout mon problème de service client ?</h3>         
 
     <div class="container">
         <p class="col-md-push-1 col-md-pull-1 col-md-10 col-lg-10" style="text-align: justify;">
@@ -182,6 +183,9 @@
         <li>Un affichage permettant de <strong>croiser les informations</strong> des incidents : fini la navigation à répétition entre les onglets et écrans</li>
         <li>Les fameux mécanismes de jeu expliqués dans les paragraphes précédents, qui rendront le travail <strong>ludique et motivant</strong></li>
       </ul>
+      <div style="text-align: center;">
+        <a href="demo" class="mbnt" ><strong>Accéder à la démo</strong></a>
+      </div>      
     </div>    
   </section>
 
@@ -237,7 +241,7 @@
       <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 conForm">
         <h4>Restez informé</h4>
         <div id="message"></div>
-        <form enctype="text/plain" name="cform" id="cform">
+        <form enctype="text/plain" name="cform" id="cform" method="POST">
           <input name="name" id="name" type="text" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Votre nom..." >
           <input name="email" id="email" type="email" class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr" placeholder="Votre email..." >
           <input type="submit" id="submit" name="send" class="submitBnt" value="Envoyer">
